--- a/Final/resources/stylesheets/style.css
+++ b/Final/resources/stylesheets/style.css
@@ -176,7 +176,7 @@ a.dropdown-item {
   color: black;
 }
 
-a.dropdown-item:active {
+button.dropdown-item:active {
   background-color: var(--RPI-Dark-Gray);
 }
 
