Finished Delete confirmation
Delete now has a confirmation.

--- a/Final/resources/stylesheets/style.css
+++ b/Final/resources/stylesheets/style.css
@@ -177,6 +177,10 @@ select option:checked {
   color: white;
 }
 
+.item-id {
+  display: none;
+}
+
 /* Changed Bootstrap Styling */
 a.nav-link,
 a.dropdown-item {
